# birthdays

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
src/: birthday.rs  config.rs  discord.rs  healthcheck.rs  main.rs
