[package]
name = "birthdays"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
twilight-util = { version = "0.15.4", features = ["builder"] }
rand = "0.8.5"
twilight-model = "0.15.4"
minreq = { version = "2.11.2", features = ["https-rustls"] }
